@@ -1,8 +1,7 @@
 
 Needed for 0.2:
 
-o igraph_minimum_spanning_tree_prim
-o attribute handling for iterators
+o attribute handling for operators
 o improve attributes: serialize/unserialize
 o igraph_i_attribute_add_edges should supply the ids of the new edges, or
   the edges themselves.....
