@@ -1,0 +1,33 @@
+0 17
+0 21
+0 12
+0 4
+0 10
+0 11
+0 8
+0 2
+0 5
+0 6
+0 31
+1 30
+2 3
+2 7
+2 9
+2 27
+2 32
+6 16
+13 33
+14 33
+15 33
+18 33
+19 33
+20 33
+22 33
+23 33
+24 31
+25 31
+26 33
+28 33
+29 33
+30 33
+31 33
