@@ -1,3 +1,9 @@
+2006-04-29  Gabor Csardi  <csardi@kzoo.edu>
+
+	* src/structural_properties.c (igraph_minimum_spanning_tree_prim) :
+	readded
+	* examples/simple/igraph_minimum_spanning_tree_prim.c : added
+
 2006-04-28  Gabor Csardi  <csardi@kzoo.edu>
 
 	* src/type_indexededgelist.c (igraph_delete_vertices) : attribute
